# Openwrt-Prplmesh

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CODEOWNERS  CODINGSTYLE.md  CONTRIBUTING.md  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  dctest.py  prplMesh.code-workspace  pyproject.toml  release.sh  version
.devcontainer/: Dockerfile  (+1 more)
agent/src/beerocks/fronthaul_manager/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fronthaul_manager_main.cpp
agent/src/beerocks/fronthaul_manager/ap_manager/: ap_manager.cpp  ap_manager.h  ap_manager_thread.cpp  ap_manager_thread.h
agent/src/beerocks/fronthaul_manager/monitor/: monitor.cpp  monitor.h  monitor_db.cpp  monitor_db.h  monitor_rssi.cpp  monitor_rssi.h  monitor_stats.cpp  monitor_stats.h  monitor_thread.cpp  monitor_thread.h
agent/src/beerocks/slave/nbapi/: CMakeLists.txt
common/beerocks/btl/: CMakeLists.txt  CTestTestfile.cmake  Makefile  btl_broker.cpp  cmake_install.cmake
common/beerocks/btl/include/btl/: broker_client.h  broker_client_factory.h  broker_client_factory_factory.h  broker_client_factory_impl.h  broker_client_impl.h  btl.h  message_parser.h  message_parser_stream_impl.h  message_serializer.h  message_serializer_stream_impl.h
common/beerocks/btl/source/: broker_client_factory_factory.cpp  broker_client_factory_impl.cpp  broker_client_impl.cpp  btl_broker.cpp  message_parser_stream_impl.cpp  message_serializer_stream_impl.cpp
controller/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
controller/config/: CTestTestfile.cmake  Makefile  beerocks_controller.conf.in  cmake_install.cmake
controller/nbapi/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  controller.odl  on_action.cpp  on_action.h
controller/nbapi/odl/: access_point.odl  access_point.odl.in  agent_connected_event.odl  agent_connected_event.odl.in  agent_disconnected_event.odl  agent_disconnected_event.odl.in  association_event.odl  association_event.odl.in  association_event_data.odl  backhaul_sta.odl  bss.odl  bss.odl.in  capabilities.odl  capabilities.odl.in  channel_scan.odl  controller.odl  controller.odl.in  device.odl  device.odl.in  disassociation_event.odl  disassociation_event.odl.in  dissasociaton_event_data.odl  dm_defaults.odl  dm_defaults.odl.in  failed_connection_event.odl  failed_connection_event.odl.in  neighbor_bss.odl  op_class_scan.odl  prplmesh.odl.in  prplmesh_definitions.odl.in  radio.odl  radio.odl.in  scan_result.odl  scan_result.odl.in  sta.odl  sta.odl.in  unassociated_sta.odl  unassociated_sta.odl.in
controller/nbapi/odl/defaults.d/: 00_test_defaults.odl.in  01_master_configuration.odl.in
controller/nbapi/odl/prplmesh_defaults/: 00_test_defaults.odl.in
controller/src/beerocks/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
controller/src/beerocks/bml/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bml.cpp  bml.h  bml_defs.h  bml_pre_association_steering_defs.h  bml_utils.cpp  bml_utils.h  cmake_install.cmake
controller/src/beerocks/cli/: CMakeLists.txt  CTestTestfile.cmake  Makefile  beerocks_cli.cpp  beerocks_cli.h  beerocks_cli_bml.cpp  beerocks_cli_bml.h  beerocks_cli_main.cpp  beerocks_cli_proxy.cpp  beerocks_cli_proxy.h  beerocks_cli_socket.cpp  beerocks_cli_socket.h  cmake_install.cmake
controller/src/beerocks/include/: config.h.in
controller/src/beerocks/master/: CMakeLists.txt  CTestTestfile.cmake  Makefile  beerocks_master_main.cpp  cmake_install.cmake  controller.cpp  controller.h  controller_ucc_listener.cpp  controller_ucc_listener.h  son_actions.cpp  son_actions.h  son_management.cpp  son_management.h  son_master_thread.cpp  son_master_thread.h  vbss_manager.cpp  vbss_manager.h
controller/src/beerocks/prplmesh-cli/: CMakeLists.txt  prplmesh_amx_client.cpp  prplmesh_amx_client.h  prplmesh_cli.cpp  prplmesh_cli.h  prplmesh_cli_main.cpp
controller/vbss/: vbss_actions.cpp  vbss_actions.h  vbss_core.cpp  vbss_core.h  vbss_ds.h  vbss_task.cpp  vbss_task.h
controller/vbss/dummy_tlvs/: tlvAPRadioVBSSCapabilities.cpp  tlvAPRadioVBSSCapabilities.h  tlvClientSecurityContext.h  tlvTriggerChannelSwitchAnnounce.cpp  tlvTriggerChannelSwitchAnnounce.h  tlvVBSSConfigurationReport.h  tlvVBSSEventTLV.h  tlvVirtualBSSCreation.cpp  tlvVirtualBSSCreation.h  tlvVirtualBSSDestruction.cpp  tlvVirtualBSSDestruction.h
controller/vbss/unit_tests/: CMakeLists.txt  vbss_tests.cpp
controller/whm/: wifi_manager.cpp  wifi_manager.h
framework/common/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  encryption_test.cpp
framework/platform/bpl/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
framework/platform/bpl/linux/: bpl_cfg.cpp  bpl_cfg_ifaces.cpp  bpl_cfg_ifaces.cpp.in  bpl_db.cpp
framework/platform/bpl/platform_db/: CTestTestfile.cmake  Makefile  cmake_install.cmake  prplmesh_platform_db.in
framework/platform/bpl/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  bpl_test.cpp  cmake_install.cmake
framework/platform/nbapi/: CMakeLists.txt  CTestTestfile.cmake  Makefile  ambiorix_dummy.cpp  ambiorix_impl.cpp  ambiorix_wrappers.cpp  ambiorixstorage.cpp  ambiorixstorage.h  cmake_install.cmake  nbapi.cpp  transaction.cpp
framework/platform/nbapi/include/: ambiorix.h  ambiorix_amxc.h  ambiorix_config.h  ambiorix_dummy.h  ambiorix_impl.h  ambiorix_mock.h  ambiorix_parser.h  ambiorix_runtime.h  nbapi.h  transaction.h
framework/platform/nbapi/unit_tests/: ambiorix_test.cpp  amxb_mock.h  amxb_wrapper.cpp  amxb_wrapper.h
framework/platform/wbapi/: CMakeLists.txt  ambiorix_client.cpp  ambiorix_client_factory.cpp  ambiorix_client_impl.cpp  ambiorix_connection.cpp  ambiorix_connection_factory.cpp  ambiorix_connection_manager.cpp  ambiorix_variant.cpp  wbapi_utils.cpp
framework/platform/wbapi/include/: ambiorix_client.h  ambiorix_client_factory.h  ambiorix_client_impl.h  ambiorix_connection.h  ambiorix_connection_factory.h  ambiorix_connection_manager.h  ambiorix_event.h  ambiorix_variant.h  wbapi_utils.h
(+1382 files in other folders)
